# mathdonewrong

./: README.md  experiments.py  pyproject.toml  test_boolexpr.py  test_boolproof.py  test_code_to_boolexpr.py  test_experiments.py  test_monoidal_categories.py  test_monoids.py  test_new_boolexpr.py
docs/source/: conf.py  index.rst  stuff.rst
mathdonewrong/: algebras.py  boolexpr.py  boolproof.py  code_to_boolexpr.py  code_to_expression.py  code_to_monoidal.py  experiments.py  expressions.py  functions.py  monoidal_categories.py  monoidal_categories_old.py  monoids.py  proofs.py  types.py  varieties.py
mathdonewrong/boolean_algebra/: __init__.py  boolexpr.py
mathdonewrong/categories/: categories.py  examples.py
mathdonewrong/common/: common_opers.py
mathdonewrong/equality/: equality_exprs.py
mathdonewrong/lambda_calc/: lambda_exprs.py
mathdonewrong/monoidal_categories/: __init__.py  categories.py  category_of_functions.py  category_of_functions_2.py  make_braid.py  monoidal_categories.py  monoidalexpr.py
mathdonewrong/monoidlike/: __init__.py  monoids.py
mathdonewrong/monoids/: __init__.py  monoids.py
test/: test_algebras.py  test_categories.py  test_category_of_functions.py  test_category_of_functions_2.py  test_code_to_boolexpr.py  test_code_to_expression.py  test_code_to_monoidal.py  test_expressions.py  test_lambda_calc.py  test_make_braid.py  test_monoidal_categories.py  test_monoidal_categories_old.py  test_monoids.py  test_primitive_recursive.py  test_primitive_recursive_typed.py  test_python_exprs.py  test_varieties.py
(+9 files in other folders)
